<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/titleTextView"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/info_title_color"
        android:textSize="25sp"
        android:paddingTop="5dp"
        android:text="@string/fake_title" />

    <TextView
        android:id="@+id/cityTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:paddingTop="3dp"
        android:text="@string/city" />

    <TextView
        android:id="@+id/noteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:paddingTop="3dp"
        android:text="@string/note" />
</LinearLayout>